# Clipador

./: .gitignore  Makefile  README.md  celerybeat-schedule.db  package-lock.json  package.json  pyproject.toml
docs/: api-contract.md  roadmap.md  (+3 more)
services/backend/: .env  .env.example  README.md  alembic.ini  pyproject.toml
services/backend/alembic/: env.py
services/backend/alembic/versions/: 0001_initial.py  0002_user_plan.py  0003_channel_config.py
services/backend/scripts/: create_admin.py  seed_from_csv.py
services/backend/src/clipador_backend/: __init__.py  celery_app.py  db.py  dependencies.py  main.py  settings.py
services/backend/src/clipador_backend/adapters/: twitch.py
services/backend/src/clipador_backend/api/: admin.py  admin_advanced.py  admin_grants.py  billing.py  clips.py  clips_extra.py  clips_history.py  config.py  dashboard.py  onboarding.py  public.py
services/backend/src/clipador_backend/models/: __init__.py  base.py  burst.py  channel.py  clip.py  config.py  purchase.py  streamer.py  user.py
services/backend/src/clipador_backend/repositories/: bursts.py  clips.py  streamers.py  user_config.py
services/backend/src/clipador_backend/security/: auth.py  dependencies.py
services/backend/src/clipador_backend/services/: _plan_helpers.py  billing.py  delivery.py  ingestion.py  monitoring_service.py  plan.py  plan_service.py
services/backend/tests/: conftest.py  test_auth.py  test_billing.py  test_clip_repository.py  test_config_api.py  test_ingestion.py  test_public.py  test_streams.py  test_user_config_repository.py  test_webhooks.py
(+76 files in other folders)
