[project]
name = "clipador"
version = "0.1.0"
description = "Monorepo web-first do Clipador"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
  "services/backend",
  "packages/clipador-core",
  "packages/clipador-adapters",
  "packages/clip-editor"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
